-
Bug
-
Resolution: Fixed
-
P3
-
17, 21, 22
-
b27
-
aarch64
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8353677 | 21.0.8-oracle | Calvin Cheung | P3 | Resolved | Fixed | b02 |
| JDK-8342571 | 21.0.6 | Boris Ulasevich | P3 | Resolved | Fixed | b01 |
Some buggy libraries corrupt the floating-point control register. Provide something similar to the x86 RestoreMXCSROnJNICalls.
- backported by
-
JDK-8342571 AArch64: Restore FPU control state after JNI
-
- Resolved
-
-
JDK-8353677 AArch64: Restore FPU control state after JNI
-
- Resolved
-
- duplicates
-
JDK-8320151 some javax/sound JCK tests fail with Invalid descriptor with graal on linux-aarch64
-
- Closed
-
- links to
-
Commit
openjdk/jdk/50f31240
-
Commit(master)
openjdk/jdk21u-dev/27d2abec
-
Review
openjdk/jdk/16851
-
Review(master)
openjdk/jdk21u-dev/1051
(2 links to)