8320892: Restore the FPCR after a JNI call on aarch64

Backport of 50f3124 from 22, by way of jdk21u-dev 9e582fc.  21u has it
and 17u does not, and it is the second half of what makes HotSpot work on
Apple Silicon: the AH and FIZ bits exist there and not on the chips the
aarch64 port was written against, so native code can leave the FPCR in a
state the JIT's code does not expect.  The call stub saves and restores
it, and the three JNI return paths reset it.

pkgsrc has been carrying exactly this as a patch to lang/openjdk17 since
2025-08-06, so it is what the openjdk17 that runs on NetBSD/aarch64 today
is built with.